Fixed scrollbar backgraound

--- a/jupyterlab_theme_solarized_light/labextension/themes/jupyterlab-theme-solarized-light/index.css
+++ b/jupyterlab_theme_solarized_light/labextension/themes/jupyterlab-theme-solarized-light/index.css
@@ -345,7 +345,7 @@ all of MD as it is not optimized for dense, information rich UIs.
   );
   --jp-search-unselected-match-color: var(--jp-ui-inverse-font-color0);
   /* scrollbar related styles. Supports every browser except Edge. */
-  --jp-scrollbar-background-color: #002b36;
+  --jp-scrollbar-background-color: #eee8d5;
   --jp-scrollbar-thumb-color: 21, 102, 103; /* need to specify thumb color as an RGB triplet */
   --jp-scrollbar-endpad: 3px; /* the minimum gap between the thumb and the ends of a scrollbar */
   /* hacks for setting the thumb shape. These do nothing in Firefox */
