--- a/style/variables.scss
+++ b/style/variables.scss
@@ -445,7 +445,7 @@ $solarized-base035: #495664;
 
   /* scrollbar related styles. Supports every browser except Edge. */
 
-  --jp-scrollbar-background-color: #{$solarized-base03};
+  --jp-scrollbar-background-color: #{$solarized-base2};
   --jp-scrollbar-thumb-color: 21, 102, 103; /* need to specify thumb color as an RGB triplet */
   --jp-scrollbar-endpad: 3px; /* the minimum gap between the thumb and the ends of a scrollbar */
 
